unpackaged/main/default/objects/Account/fields/Account_Salesperson_Location__c.field-meta.xml
<CustomField>
    <fullName>Account_Salesperson_Location__c</fullName>
    <formula>TEXT(Sales_Person__r.UserLocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Person Location</label>
    <type>Text</type>
</CustomField>