unpackaged/main/default/objects/Account/fields/Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name__c</fullName>
    <description>Field to populate Account Name from Data.com</description>
    <inlineHelpText>Field to populate Account Name from Data.com</inlineHelpText>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>