unpackaged/main/default/objects/Account/fields/Alternative_Org_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Org_Name_1__c</fullName>
    <label>Alternative Org Name 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>