unpackaged/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>The credit approval status from GBMS.</description>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>