unpackaged/main/default/objects/Account/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>Blitz Account field for integration</description>
    <label>Balance Due</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>