unpackaged/main/default/objects/Account/fields/Blitz_Status__c.field-meta.xml
<CustomField>
    <fullName>Blitz_Status__c</fullName>
    <description>Blitz field for Account Integration</description>
    <label>Blitz Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>