unpackaged/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pfizer</fullName>
                <label>Pfizer - IM</label>
            </value>
            <value>
                <fullName>Pfizer - EM</fullName>
            </value>
            <value>
                <fullName>Pfizer - CH</fullName>
            </value>
            <value>
                <fullName>Pfizer - Biosimilars</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Biosimilars</label>
            </value>
            <value>
                <fullName>Pfizer - Cardiovascular / Metabolics</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Cardiovascular / Metabolics</label>
            </value>
            <value>
                <fullName>Pfizer - EP  Legacy Brands</fullName>
                <isActive>false</isActive>
                <label>Pfizer - EP  Legacy Brands</label>
            </value>
            <value>
                <fullName>Pfizer - Endocrine</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Endocrine</label>
            </value>
            <value>
                <fullName>Pfizer - Hemophilia</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Hemophilia</label>
            </value>
            <value>
                <fullName>Pfizer - Inflammation - Ulcerative Colitis</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Inflammation - Ulcerative Colitis</label>
            </value>
            <value>
                <fullName>Pfizer - Oncology</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Oncology</label>
            </value>
            <value>
                <fullName>Pfizer - Other EP products</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Other EP products</label>
            </value>
            <value>
                <fullName>Pfizer - PCA Group</fullName>
                <isActive>false</isActive>
                <label>Pfizer - PCA Group</label>
            </value>
            <value>
                <fullName>Pfizer - PCH</fullName>
                <isActive>false</isActive>
                <label>Pfizer - PCH</label>
            </value>
            <value>
                <fullName>Pfizer - Pfizer Sterile Injectables</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Pfizer Sterile Injectables</label>
            </value>
            <value>
                <fullName>Pfizer - Pfizer Trade</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Pfizer Trade</label>
            </value>
            <value>
                <fullName>Pfizer - Rare Diseases</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Rare Diseases</label>
            </value>
            <value>
                <fullName>Pfizer - Smoking Cessation</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Smoking Cessation</label>
            </value>
            <value>
                <fullName>Pfizer - Vaccines</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Vaccines</label>
            </value>
            <value>
                <fullName>Pfizer - Women’s Health</fullName>
                <isActive>false</isActive>
                <label>Pfizer - Women’s Health</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>