unpackaged/main/default/objects/Account/fields/Business_Type_Numerical_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Numerical_Value__c</fullName>
    <formula>VALUE(CASE(Business_Type__c, &quot;Exhibitor&quot;, &quot;1&quot;, &quot;Firm&quot;, &quot;2&quot;, &quot;Contractor&quot;, &quot;3&quot;,&quot;1&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Numerical Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>