unpackaged/main/default/objects/Account/fields/BX_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>BX_Cross_Sell__c</fullName>
    <label>BX Cross Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EMEA referral to US</fullName>
            </value>
            <value>
                <fullName>Events referral to Exhibits</fullName>
            </value>
            <value>
                <fullName>Events referral to OnServices</fullName>
            </value>
            <value>
                <fullName>Exhibits referral to Events</fullName>
            </value>
            <value>
                <fullName>Exhibits referral to OnServices</fullName>
            </value>
            <value>
                <fullName>OnServices referral to Events</fullName>
            </value>
            <value>
                <fullName>OnServices referral to Exhibits</fullName>
            </value>
            <value>
                <fullName>US referral to EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>