unpackaged/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Hidden field. Used with R2 to populate Type.</description>
    <label>Category</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>