unpackaged/main/default/objects/Account/fields/Cleaning_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleaning Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Cleaning Provider)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>