unpackaged/main/default/objects/Account/fields/Cleaning_Provider_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Provider_Contract_Exp_Date__c</fullName>
    <label>Cleaning Provider Contract Exp Date</label>
    <type>Date</type>
</CustomField>