unpackaged/main/default/objects/Account/fields/Client_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Client_Presentation__c</fullName>
    <inlineHelpText>Day of Account Presentation.</inlineHelpText>
    <label>Client Presentation Date</label>
    <type>Date</type>
</CustomField>