unpackaged/main/default/objects/Account/fields/Convention_Events_Manager__c.field-meta.xml
<CustomField>
    <fullName>Convention_Events_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convention/Events Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Convention/Events Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>