unpackaged/main/default/objects/Account/fields/Convention_Events_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Convention_Events_Manager_Email__c</fullName>
    <formula>Convention_Events_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convention/Events Manager Email</label>
    <type>Text</type>
</CustomField>