unpackaged/main/default/objects/Account/fields/Create_New__c.field-meta.xml
<CustomField>
    <fullName>Create_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box on custom page (PageNewAccount) to force customer creation even if it is duplicate i.e. there is an existing customer</description>
    <label>Create New</label>
    <type>Checkbox</type>
</CustomField>