unpackaged/main/default/objects/Account/fields/Custom_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Custom_Parent_Account__c</fullName>
    <description>This field only use for shows account related list under each account detail page. It is populated during the account hierarchy setup.</description>
    <label>Custom Parent Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>