unpackaged/main/default/objects/Account/fields/Date_Created_SOP__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_SOP__c</fullName>
    <label>Date Created in SOP</label>
    <type>DateTime</type>
</CustomField>