unpackaged/main/default/objects/Account/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>Doing Business As</description>
    <label>DBA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>