unpackaged/main/default/objects/Account/fields/Decorating_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Decorating_Exclusive__c</fullName>
    <label>Decorating Exclusive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>