unpackaged/main/default/objects/Account/fields/Delivery_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Indicator__c</fullName>
    <description>Address Type to determine if residential or company for US addresses</description>
    <inlineHelpText>Address Type to determine if residential or company for US addresses</inlineHelpText>
    <label>Delivery Indicator</label>
    <length>250</length>
    <type>Text</type>
</CustomField>