unpackaged/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Division, department or separate billing area for this account.</inlineHelpText>
    <label>Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>