unpackaged/main/default/objects/Account/fields/Director_of_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Sales_Email__c</fullName>
    <formula>Director_of_Sales__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director of Sales Email</label>
    <type>Text</type>
</CustomField>