unpackaged/main/default/objects/Account/fields/Director_of_Sales_Phone__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Sales_Phone__c</fullName>
    <formula>Director_of_Sales__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director of Sales Phone</label>
    <type>Text</type>
</CustomField>