unpackaged/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount field used by Blitz Team</description>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>17.5</fullName>
            </value>
            <value>
                <fullName>22.5</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>