unpackaged/main/default/objects/Account/fields/Drayage_GES_Commission__c.field-meta.xml
<CustomField>
    <fullName>Drayage_GES_Commission__c</fullName>
    <label>Drayage GES Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>