unpackaged/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>D&amp;B Account Number</description>
    <label>DUNS Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>