unpackaged/main/default/objects/Account/fields/Electrical_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Exclusive__c</fullName>
    <label>Electrical Exclusive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>