unpackaged/main/default/objects/Account/fields/Electrical_Provider_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Provider_Contract_Exp_Date__c</fullName>
    <label>Electrical Provider Contract Exp Date</label>
    <type>Date</type>
</CustomField>