unpackaged/main/default/objects/Account/fields/EMEA__c.field-meta.xml
<CustomField>
    <fullName>EMEA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this account is EMEA and is to be transferred to SOP, check this box.</inlineHelpText>
    <label>EMEA</label>
    <type>Checkbox</type>
</CustomField>