unpackaged/main/default/objects/Account/fields/EMEA_Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is automatically checked if not type Contractor or Firm. Only finance / admins can change this manually</description>
    <inlineHelpText>This indicates if the record can be synced with Salesforce. It is automatically set when not a firm or contractor. Only Finance and admins can manually check this box.</inlineHelpText>
    <label>EMEA Finance Approved</label>
    <type>Checkbox</type>
</CustomField>