unpackaged/main/default/objects/Account/fields/EURO_SOP_ID__c.field-meta.xml
<CustomField>
    <fullName>EURO_SOP_ID__c</fullName>
    <externalId>true</externalId>
    <label>EURO SOP ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>