unpackaged/main/default/objects/Account/fields/Eventbox_Password__c.field-meta.xml
<CustomField>
    <fullName>Eventbox_Password__c</fullName>
    <label>Eventbox Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>