unpackaged/main/default/objects/Account/fields/Exhibitor_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Account_Type__c</fullName>
    <inlineHelpText>Reflects whether this is a Tradeshow, Priority or Program Account</inlineHelpText>
    <label>Exhibitor Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>