unpackaged/main/default/objects/Account/fields/Exhibitor_onDataCom__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_onDataCom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filed used for checking if Accounts are created from exhibitor informa api and are updated throw data.com</description>
    <label>Exhibitor onDataCom</label>
    <type>Checkbox</type>
</CustomField>