unpackaged/main/default/objects/Account/fields/Facility_Cleaning_Provider__c.field-meta.xml
<CustomField>
    <fullName>Facility_Cleaning_Provider__c</fullName>
    <label>Cleaning Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>