unpackaged/main/default/objects/Account/fields/Facility_Constr_Renov_New_Constr__c.field-meta.xml
<CustomField>
    <fullName>Facility_Constr_Renov_New_Constr__c</fullName>
    <label>Facility Construction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>