unpackaged/main/default/objects/Account/fields/Facility_Rigging_Provider__c.field-meta.xml
<CustomField>
    <fullName>Facility_Rigging_Provider__c</fullName>
    <label>Rigging Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>