unpackaged/main/default/objects/Account/fields/Facility_Sponsorship_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Sponsorship_Provider_Type__c</fullName>
    <label>Sponsorship Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>