unpackaged/main/default/objects/Account/fields/GBMS_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_CustomerID__c</fullName>
    <description>This is used for Salesforce to US GBMS Integration</description>
    <label>GBMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>