unpackaged/main/default/objects/Account/fields/GBMS_Venue_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_Venue_ID__c</fullName>
    <description>Interal ID to GBMS used to help map to Facility account record types.</description>
    <label>GBMS Venue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>