unpackaged/main/default/objects/Account/fields/GDPR_Addendum_Declined__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Addendum_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Client has declined to sign GES addendum</inlineHelpText>
    <label>GDPR Addendum Declined</label>
    <type>Checkbox</type>
</CustomField>