unpackaged/main/default/objects/Account/fields/GES_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Type__c</fullName>
    <formula>IF( 
OR( 
ISPICKVAL(Owner.Selling_Group__c, &quot;National&quot;), 
ISPICKVAL(Owner.Selling_Group__c, &quot;Portfolio&quot;), 
ISPICKVAL(Owner.Selling_Group__c, &quot;Regional&quot;), 
ISPICKVAL(Owner.Selling_Group__c, &quot;Canada&quot; ) 
), 
&quot;Exhibition&quot;, 
IF( 
OR( 
ISPICKVAL(Owner.Selling_Group__c, &quot;Corporate Accounts&quot;), 
ISPICKVAL(Owner.Selling_Group__c, &quot;International&quot;), 
ISPICKVAL(Owner.Selling_Group__c, &quot;Branded Entertainment&quot;) 
), 
&quot;Corporate Account&quot;,&quot;Other&quot;) )</formula>
    <label>GES Account Type</label>
    <type>Text</type>
</CustomField>