unpackaged/main/default/objects/Account/fields/GES_Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>GES_Master_Customer_Number__c</fullName>
    <description>GES Master Customer Number. Field datatype is VARCHAR2(30) in CORE. Not required field. Should be setup as External Id field as that would allow searching, indexing, matching (import/upsert) and ultiple records could have the same value. But unable to do so due to &quot;Custom field index limit exceeded&quot;</description>
    <label>GES Master Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>