unpackaged/main/default/objects/Account/fields/GES_signed_Data_Protection_Policy__c.field-meta.xml
<CustomField>
    <fullName>GES_signed_Data_Protection_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>GES has signed client’s data protection policy</inlineHelpText>
    <label>GES signed Data Protection Policy</label>
    <type>Checkbox</type>
</CustomField>