unpackaged/main/default/objects/Account/fields/GES_Status__c.field-meta.xml
<CustomField>
    <fullName>GES_Status__c</fullName>
    <label>GES Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>