unpackaged/main/default/objects/Account/fields/Global_Ultimate_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Business_Name__c</fullName>
    <description>Global Ultimate Business Name from data.com</description>
    <label>Global Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>