unpackaged/main/default/objects/Account/fields/Global_Ultimate_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Duns_Number__c</fullName>
    <description>Global Ultimate Duns Number from Data.com</description>
    <label>Global Ultimate Duns Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>