unpackaged/main/default/objects/Account/fields/Graphics_Provider__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphics Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Graphics Provider)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>