unpackaged/main/default/objects/Account/fields/In_House_Decorator__c.field-meta.xml
<CustomField>
    <fullName>In_House_Decorator__c</fullName>
    <label>In-House Decorator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>