unpackaged/main/default/objects/Account/fields/In_House_Decorator_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>In_House_Decorator_Contract_Exp_Date__c</fullName>
    <label>In-House Decorator Contract Exp Date</label>
    <type>Date</type>
</CustomField>